PR feedback
Signed-off-by: martingeorgiev1 <martin.georgiev@limechain.tech>